# Flashy

./: .$General_UML.drawio.bkp  .$General_UML.drawio.dtmp  .gitignore  CMakeLists.txt  Client(Zahar)  CmakeLists.txt  DB (Akim).drawio  Dataset.cpp  Dataset.h  Dockerfile  Flashy.pro  General_UML.drawio  Makefile  Model.cpp  Model.h  Net.h  Preprocessor.cpp  Preprocessor.h  README.md  RecSys.cpp  RecSys.h  Server (Vlad).drawio  Service.cpp  Service.h  ServiceInterface.h  Stemmer.h  UML ML Model (Vova).drawio  UML.drawio  build.sh  conanfile.py  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  startpage.cpp  startpage.h  startpage.ui  (+3 more)
Client/: .gitignore  CMakeLists.txt  Server.cpp  Server.h  main.cpp
Client/src_client/: CMakeLists.txt
Client/src_client/Client/: CMakeLists.txt  Client.cpp  Client.h
Client/src_client/Data/: CMakeLists.txt
Client/src_client/Data/Page/: CMakeLists.txt  Page.cpp  Page.h
Client/src_client/Data/Question/: Question.h
Client/src_client/Data/User/: CMakeLists.txt  User.cpp  User.h
Client/src_client/Manager/: Manager.cpp  Manager.h
Client/src_client/Serializer/: CMakeLists.txt  Serializer.cpp  Serializer.h
Client/src_qt/: CMakeLists.txt
Client/src_qt/custompage/: CMakeLists.txt  custompage.cpp  custompage.h  custompage.ui
Client/src_qt/dynamic/notebutton/: CMakeLists.txt  notebutton.cpp  notebutton.h
Client/src_qt/dynamic/questioneditor/: questioneditor.cpp  questioneditor.h  questioneditor.ui
Client/src_qt/dynamic/questionfield/: questionfield.cpp  questionfield.h  questionfield.ui
Client/src_qt/editpage/: editpage.cpp  editpage.ui
Client/src_qt/mainpage/: mainpage.cpp  mainpage.h  mainpage.ui
Client/src_qt/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/src_qt/page/: page.h  page.ui
Client/src_qt/recompage/: CMakeLists.txt  recompage.cpp
Client/src_qt/regpage/: regpage.cpp  regpage.ui
Client/src_qt/startpage/: startpage.cpp  startpage.h  startpage.ui
Client/src_qt/testpage/: CMakeLists.txt  testpage.cpp  testpage.h  testpage.ui
Client/src_qt/userpage/: CMakeLists.txt  userpage.cpp  userpage.h  userpage.ui
DB_lib/: CMakeLists.txt  DB.cpp  DB.h  DB_tables.cpp  DB_tables.h  DB_tables_page.cpp  DB_tables_page.h  DB_tables_question.cpp  DB_tables_question.h  DB_tables_users.cpp  DB_tables_users.h  flashy (1).sql  flashy (2).sql  flashy (3).sql  flashy (4).sql
Testing/: CMakeLists.txt
Vlad server/UML-vlad-dev/: CMakeLists.txt  Dockerfile  README.md  client.cpp  conanfile.py
Vlad server/UML-vlad-dev/src/: CMakeLists.txt  main.cpp
Zakhar/Client/: .gitignore  CMakeLists.txt  main.cpp
Zakhar/Client/build-src_qt-Desktop-Debug/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake
Zakhar/Client/build-src_qt-Desktop-Debug/custompage/: Makefile  cmake_install.cmake
Zakhar/Client/build-src_qt-Desktop-Debug/mainpage/: Makefile  cmake_install.cmake
Zakhar/Client/build-src_qt-Desktop-Debug/mainwindow/: Makefile  cmake_install.cmake
Zakhar/Client/build-src_qt-Desktop-Debug/recompage/: Makefile  cmake_install.cmake
Zakhar/Client/build-src_qt-Desktop-Debug/regpage/: Makefile  cmake_install.cmake
Zakhar/Client/build-src_qt-Desktop-Debug/startpage/: Makefile  cmake_install.cmake
Zakhar/Client/build-src_qt-Desktop-Debug/userpage/: Makefile  cmake_install.cmake
Zakhar/Client/src_client/: CMakeLists.txt
Zakhar/Client/src_client/Client/: CMakeLists.txt  Client.cpp  Client.h
Zakhar/Client/src_client/Data/: CMakeLists.txt
Zakhar/Client/src_client/Manager/: CMakeLists.txt  Manager.cpp  Manager.h
Zakhar/Client/src_client/Serializer/: CMakeLists.txt  Serializer.cpp  Serializer.h
Zakhar/Client/src_qt/: CMakeLists.txt
Zakhar/Client/src_qt/custompage/: CMakeLists.txt  custompage.cpp  custompage.h  custompage.ui
server/: CMakeLists.txt
server/DB/: CMakeLists.txt  DB.cpp  DB.h  flashy.sql  flashy_new.sql
server/data/: index.html  index.json  page.json
server/entities/: CMakeLists.txt
server/entities/include/: Page.h  Question.h  User.h
server/entities/src/: Page.cpp  Question.cpp  User.cpp
server/libs/API/: CMakeLists.txt  IManager.hpp
server/libs/DB/: CMakeLists.txt
server/libs/Exceptions/: CMakeLists.txt  Exceptions.h
server/libs/Json/: CMakeLists.txt  JsonSerializer.cpp  JsonSerializer.h
server/libs/Logger/: CMakeLists.txt  Logger.hpp
server/libs/exceptions/: CMakeLists.txt  Exceptions.h
server/libs/http_parser/: CMakeLists.txt  HttpParser.cpp  HttpParser.h
server/libs/http_response/: CMakeLists.txt  IHttpResponse.hpp
server/libs/json/: CMakeLists.txt  JsonSerializer.cpp  JsonSerializer.h
server/libs/nlohmann/: CMakeLists.txt
server/libs/server/: CMakeLists.txt
server/recommendations_system/: CMakeLists.txt  Dataset.cpp  Dataset.h  Net.cpp  Net.h  RecSys.cpp  RecSys.h
server/src/: CMakeLists.txt
server/src/include/: API_Gateway.hpp  Listener.h  RequestHandler.hpp  Server.h
server/src/src/: Listener.cpp  Server.cpp
server/storage/: CMakeLists.txt  Storage.cpp  Storage.h
server/tests/: CMakeLists.txt  Test.cpp  general.cpp  http_parser.cpp  json.cpp
server/torch/: CMakeLists.txt
source/: CMakeLists.txt  Dataset.cpp  Dataset.h  Net.cpp  Net.h  RecSys.cpp  RecSys.h  main.cpp
src/: CMakeLists.txt  main.cpp
src/libs/API/: CMakeLists.txt  IManager.hpp  JsonSerializer.cpp  JsonSerializer.hpp
src/libs/DB/: DB.cpp  DB.h  DB_tables_page.cpp  DB_tables_users.cpp  flashy.sql
src/libs/HTTP_PARSER/: CMakeLists.txt  Errors.hpp  HttpParser.cpp
src/libs/JSON/: CMakeLists.txt  JsonSerializer.cpp
src/libs/exceptions/: Exceptions.h  README.md
src/libs/http_errors_response/: CMakeLists.txt  HttpErrorCreator.hpp  HttpErrors.hpp
src/libs/http_parser/: HttpParser.cpp  README.md
src/libs/http_response/: CMakeLists.txt
src/libs/json/: JsonSerializer.cpp  JsonSerializer.h
src/libs/server/: CMakeLists.txt
src/server/include/: API_Gateway.hpp  Logger.hpp  Server.h  websocket_connection.h
src/server/src/: JSON_serializer.cpp  Listener.cpp
tests/: CMakeLists.txt  Test.cpp  test.cpp
(+175 files in other folders)
