cmake_minimum_required(VERSION 3.16)
project(Client)
set(CMAKE_EXE_LINKER_FLAGS "-pthread")
find_package(Boost REQUIRED)
file(GLOB SOURCES main.cpp)
add_subdirectory(src_client)
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(Client LINK_PUBLIC Web_socket_Client Serializer User Block Note)
target_link_libraries(${PROJECT_NAME} PRIVATE ${Boost_LIBRARIES})
