cmake_minimum_required(VERSION 3.5)
project(Client LANGUAGES CXX)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXE_LINKER_FLAGS "-pthread")
find_package(Boost REQUIRED)
find_package(Qt5 COMPONENTS Widgets REQUIRED)
file(GLOB SOURCES main.cpp)
add_subdirectory(src_client)
add_subdirectory(src_qt)
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(Client LINK_PUBLIC Web_socket_Client Serializer User Test Text_field Note Manager )
target_link_libraries(Client LINK_PUBLIC page custompage mainpage mainwindow recompage)
target_link_libraries(Client LINK_PUBLIC regpage startpage userpage testpage editpage)
target_link_libraries(Client PRIVATE Qt5::Widgets)
target_link_libraries(${PROJECT_NAME} PRIVATE ${Boost_LIBRARIES})
